--- a/GranTurismo/sezona2025_ver_1_10.html
+++ b/GranTurismo/sezona2025_ver_1_10.html
@@ -665,6 +665,11 @@ let CAR_INDEX = { brands: [], byBrand: {} };
 let carsReadyResolve;
 const carsReady = new Promise(res=>carsReadyResolve=res);
 
+// --- Sezóny ---
+let currentSeason = null;
+// Když chceš sezónu vynutit ručně, nastav číslo (např. 2025). Jinak nech null = auto.
+const FORCE_SEASON = null;
+
 /* === Helpers === */
 const $ = s=>document.querySelector(s);
 const $$ = s=>Array.from(document.querySelectorAll(s));
@@ -677,6 +682,36 @@ function hasNonDnsResult(r){ return getResultsArray(r).some(v=>v && v!=='DNS' &&
 function isPast(dateStr){ if(!dateStr) return false; return new Date(dateStr) <= new Date(); }
 function isCompletedRace(r){ const d = r.datum||r.date; return isPast(d) && hasNonDnsResult(r); }
 function deepClone(o){ return JSON.parse(JSON.stringify(o)); }
+
+// --- Sezóna: z dokumentu -> číslo roku
+function getSeason(r){
+  if (r.sezona != null) return Number(r.sezona);
+  if (r.season != null) return Number(r.season);
+  const d = r.datum || r.date;
+  return d ? new Date(d).getFullYear() : null;
+}
+
+// Aktivní sezóna podle dat (nebo FORCE_SEASON)
+function computeActiveSeason(arr){
+  if (FORCE_SEASON != null) return Number(FORCE_SEASON);
+  const curYear = new Date().getFullYear();
+  const found = new Set();
+  arr.forEach(r=>{
+    const s = getSeason(r);
+    if (s != null && !Number.isNaN(s)) found.add(s);
+  });
+  if (found.has(curYear)) return curYear;
+  if (found.size) return Math.max(...found);
+  return curYear; // fallback
+}
+
+// Filtr: patří závod do aktivní sezóny?
+function inActiveSeason(r){
+  const s = getSeason(r);
+  if (currentSeason == null) return true;
+  return s === currentSeason;
+}
+
 
 /* === Tabs === */
 $$('.tablink').forEach(btn=>{
@@ -712,16 +747,24 @@ function startRealtime(){
       return new Date(ad)-new Date(bd);
     });
     racesCache=arr;
+
+    // >>> Přidáno: vyber aktivní sezónu
+    currentSeason = computeActiveSeason(racesCache);
+
     renderAll();
   }, err=>{
     console.error('Snapshot error',err);
-    db.collection('zavody').get().then(sn=>{ const arr=[]; sn.forEach(d=>arr.push({id:d.id,...d.data()})); racesCache=arr; renderAll(); });
+    db.collection('zavody').get().then(sn=>{ const arr=[]; sn.forEach(d=>arr.push({id:d.id,...d.data()})); racesCache=arr;
+      // >>> Přidáno i do fallbacku
+      currentSeason = computeActiveSeason(racesCache);
+      renderAll();
+    });
   });
 }
 
 /* === Render orchestration === */
 function renderAll(){
-  renderNextRace();
+  renderNextRace();          // (ten necháváme napříč sezónami – jde o nejbližší závod)
   renderResultsTable();
   renderPlannedTable();
   renderStandingsAndChart();
@@ -730,8 +773,9 @@ function renderAll(){
   renderDriverLegend();
   renderCarStats();
   renderAdvancedStats();
-  renderTitleMath();          // ← přidané volání
+  renderTitleMath();
   renderProfileInit();
+  renderArchive();           // <<< přidáno
 }
 
 /* === Nejbližší závod + připomínka === */
@@ -897,8 +941,10 @@ function applyPenalties(baseResults, penalties){
 /* === Results (completed) === */
 function renderResultsTable(){
   const tbody = $('#resultsTable tbody'); tbody.innerHTML='';
-  const completed = racesCache.filter(isCompletedRace)
+  const completed = racesCache
+    .filter(r=> inActiveSeason(r) && isCompletedRace(r))
     .sort((a,b)=> new Date(b.datum||b.date||0) - new Date(a.datum||a.date||0));
+  // ... zbytek funkce beze změn
   completed.forEach(r=>{
     const dateStr = r.datum||r.date ? new Date(r.datum||r.date).toLocaleString() : '';
     const nameTrack = `${escapeHtml(r.nazev||r.name||'')} / ${escapeHtml(r.trat||r.track||'')}`;
@@ -925,8 +971,10 @@ function renderResultsTable(){
 /* === Planned (everything not completed) === */
 function renderPlannedTable(){
   const tbody=$('#plannedTable tbody'); tbody.innerHTML='';
-  const planned = racesCache.filter(r=>!isCompletedRace(r))
+  const planned = racesCache
+    .filter(r=> inActiveSeason(r) && !isCompletedRace(r))
     .sort((a,b)=> new Date(a.datum||a.date||0) - new Date(b.datum||b.date||0));
+  // ... zbytek funkce beze změn
   planned.forEach(r=>{
     const dateStr = r.datum||r.date ? new Date(r.datum||r.date).toLocaleString() : '';
     const title = escapeHtml(r.nazev||r.name||'');
@@ -962,8 +1010,10 @@ function renderDriverLegend(){
   });
 }
 function renderStandingsAndChart(){
-  const completed = racesCache.filter(isCompletedRace)
+  const completed = racesCache
+    .filter(r=> inActiveSeason(r) && isCompletedRace(r))
     .sort((a,b)=> new Date(a.datum||a.date||0) - new Date(b.datum||b.date||0));
+  // ... zbytek funkce beze změn
 
   // META: doplněk k nadpisu „Pořadí závodníků“
   const X = completed.length;                                   // odjeté závody
@@ -2356,6 +2406,93 @@ function renderDriverProfile(name){
   });
 }
 
+/* === Archiv sezón === */
+function renderArchive(){
+  const box = $('#archiveArea');
+  if(!box) return;
+
+  // Seskupit odjeté závody podle sezóny
+  const groups = new Map(); // season -> array of races
+  racesCache.forEach(r=>{
+    if(!isCompletedRace(r)) return;  // archiv = jen odjeté
+    const s = getSeason(r);
+    if(s==null || Number.isNaN(s)) return;
+    if(!groups.has(s)) groups.set(s, []);
+    groups.get(s).push(r);
+  });
+
+  if(groups.size===0){
+    box.innerHTML = 'Zatím prázdné.';
+    return;
+  }
+
+  // Sezóny od nejnovější po nejstarší
+  const seasons = Array.from(groups.keys()).sort((a,b)=>b-a);
+
+  const parts = [];
+  seasons.forEach(season=>{
+    const races = groups.get(season).slice().sort((a,b)=>new Date(a.datum||a.date) - new Date(b.datum||b.date));
+
+    const rows = races.map(r=>{
+      const dateStr = r.datum||r.date ? new Date(r.datum||r.date).toLocaleString() : '';
+      const nameTrack = `${escapeHtml(r.nazev||r.name||'')} / ${escapeHtml(r.trat||r.track||'')}`;
+
+      const qualiFront = (getQualiArray(r).length? getQualiArray(r) : [])
+        .slice(0,2)
+        .map(n=>{
+          const clean = normName(n);
+          const col = driverColors[clean] || (n==='DNS' ? '#aaa' : '#ccc');
+          return `<span class="name-chip" style="border-color:${col};color:${col}">${escapeHtml(n)}</span>`;
+        }).join('');
+
+      const penal = Array.isArray(r.penalties)? r.penalties : [];
+      const applied = applyPenalties(getResultsArray(r), penal);
+      const cells = Array.from({length:5},(_,i)=>applied[i]||'DNS').map((c,i)=>{
+        const clean = normName(c); const col=driverColors[clean]||(c==='DNS'?'#aaa':'#ccc');
+        return `<td style="color:${col}">${escapeHtml(c)}</td>`;
+      }).join('');
+
+      const yt = r.youtube || r.video || r.youtubeUrl || r.youtube_link || r.link || r.odkaz;
+      const id = ytId(yt);
+      const video = id ? `<a href="${escapeHtml(yt)}" target="_blank"><img class="youtube-thumb" src="https://img.youtube.com/vi/${id}/hqdefault.jpg" alt="video"></a>` :
+                   (yt ? `<a href="${escapeHtml(yt)}" target="_blank">Video</a>` : '');
+
+      return `<tr>
+        <td>${dateStr}</td>
+        <td>${nameTrack}</td>
+        <td>${qualiFront||''}</td>
+        ${cells}
+        <td>${video}</td>
+      </tr>`;
+    }).join('');
+
+    parts.push(`
+      <div class="card" style="margin-top:12px">
+        <strong>Sezóna ${season}</strong>
+        <table>
+          <thead>
+            <tr>
+              <th>Datum</th><th>Závod / Trať</th>
+              <th>Q první řada</th>
+              <th>1.</th><th>2.</th><th>3.</th><th>4.</th><th>5.</th>
+              <th>Video</th>
+            </tr>
+          </thead>
+          <tbody>${rows}</tbody>
+        </table>
+      </div>
+    `);
+  });
+
+  box.innerHTML = parts.join('');
+}
+
+/* === Start === */
+function initTabs(){
+  // ...
+}
+
+  
 /* === Start === */
 function initTabs(){
   $$('section').forEach(s=>s.classList.remove('active')); $('#home').classList.add('active');
