--- a/GranTurismo/sezona2025.html
+++ b/GranTurismo/sezona2025.html
@@ -243,7 +243,7 @@ tbody tr:hover{ background: rgba(255,255,255,0.04); }
         <th>Potřeba na titul</th>
         <th>Ve hře o titul</th>
         <th>Ve hře o pódium</th>
-        <th>Pravděpodobnost podle formy</th>
+        <th>Pravděpodobnost zisku titulu (dle akt. formy)</th>
       </tr>
     </thead>
     <tbody></tbody>
